[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/dance-system/block_dynamic.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[node name="block_move_left" type="StaticBody2D"]
position = Vector2( 160, 112 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
STATE = 1

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 1 )

[node name="start_moving" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -3.0
margin_top = -22.0
margin_right = 13.0
margin_bottom = -8.0

[node name="stop__moving" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="start_moving" to="." method="_on_start_moving_timeout"]
[connection signal="timeout" from="stop__moving" to="." method="_on_stop__moving_timeout"]
